--- a/appsettings.json
+++ b/appsettings.json
@@ -8,7 +8,7 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
 
-    "ChallengeConnectionString": "Server=ODDINX-PC\\SQLEXPRESS;Database=APIChallenge;Trusted_Connection=True;MultipleActiveResultSets=true; TrustServerCertificate=True"
+    "ChallengeConnectionString": "Server=German-PC\\SQLEXPRESS;Database=APIChallenge;Trusted_Connection=True;MultipleActiveResultSets=true; TrustServerCertificate=True"
 
   }
 }
